package com.dlstone.ddd.practice.parklot.config.domain;

public enum ParkingStrategyName {
    SORTED, MAX_IDLE;
}
