package com.dlstone.ddd.practice.parklot.parking.domain;

import lombok.Value;

@Value
public class Car {
    private final CarId id;
}
