package com.dlstone.ddd.practice.parklot.parking.domain.core;

public interface ParkingLotFinderSpecification {

    ParkingLotFinder newParkingLotFinder();
}
